2001-12-10  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/keenspot: Updated GPF based on changes submitted by
	Sven Hartge.
	* Netcomics/Factory.pm: 463946: fixed code that had uninitialized
	value errors. 

2001-12-02  Elliot Glaysher  <glaysher@umich.edu>

	* lib/norm (nm): Fixed The Norm's module. Closes:#463945.
	* Netcomics/Factory.pm (setup): Fixed serious bug which was causing
	netcomics to ignore the "day's behind" in most situations where 
	netcomics *should* be offsetting the date by the day's behind.

2001-11-29  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspace (machall): Mac Hall now works better and gets today's
	comic. Problems getting archives, though.

2001-11-27  Elliot Glaysher  <glaysher@umich.edu>

	* netcomics: Fixed really _stupid_ efficiency problem with new today
	webpage feature.
	* lib/keenspot (elf): elf changed location of index. Fixed.

2001-11-25  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/Factory.pm (get_comics): Fixed typo in the "Please, before
	sending in a bug..." message.

2001-11-19  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspace (machall): Fixed error grammer stupid!
	(chopping): Added by Shawn Oakey.
	(oddjobs): Added by Shawn Oakey.
	(miracle): Added by Shawn Oakey.
	(ua): Added by Shawn Oakey.
	(machall): Screwed with machall...again...

2001-11-18  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML.pm: Commented out debugging messages that appear to be
	months old.
	* lib/doemain (doemain): Updated for sanity.
	* lib/keenspace (machall): Wrote a machall module.
	* lib/keenspot (elf): Updated missing comics list.

2001-11-16  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspace (roses): Updated missing comics list.
	* lib/keenspot (exploit): Updated missing comics list.
	* lib/sluggy_freelance (sluggy): Updated missing comics list.

2001-11-15  Elliot Glaysher  <glaysher@umich.edu>

	* netcomics: Added a "Today's Comics" feature.